# baton

./: .gitignore  build.gradle.kts  build_out.txt  generate_icons.py  gradle.properties  replace_collect.py  settings.gradle.kts  strip_auth.py
.github/workflows/: ci.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro  release.jks
app/src/androidTest/kotlin/com/ekam/baton/: AppStartupTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: biometric_disclosure.txt  privacy_policy.txt  terms_of_service.txt
app/src/main/kotlin/com/ekam/baton/: AppLockObserver.kt  BatonApplication.kt  BatonStreamingService.kt  ComplianceNotificationWorker.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_logo_vector.xml  ic_splash_branding.xml
app/src/main/res/values/: ic_launcher_colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
baton-crypto-android/: Cargo.toml
baton-crypto-android/src/: lib.rs
core/data/: build.gradle.kts
core/data/schemas/com.ekam.baton.core.data.db.BatonDatabase/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
core/network/: build.gradle.kts
core/ui/: FONTS_README.md  build.gradle.kts
core/ui/src/main/res/values/: font_certs.xml
feature/agents/: build.gradle.kts
feature/agents/src/main/: AndroidManifest.xml
feature/chat/: build.gradle.kts
feature/memory/: build.gradle.kts
feature/settings/: build.gradle.kts
gateway-engine/: Cargo.toml  trusted_clients.json
gateway-engine/src/: main.rs
gradle/: libs.versions.toml
(+130 files in other folders)
