[package]
name = "baton-crypto-android"
version = "1.0.0"
edition = "2021"

[lib]
name = "baton_crypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = { version = "0.21" }
aes-gcm = "0.10"
base64 = "0.21"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hkdf = "0.12"
hex = "0.4"
